# godot-ponsvg

./: .gitignore  .gitmodules  CMakeLists.txt  DEVELOPMENT_SETUP.md  Featureset.md  PROJECT_STATUS.md  README.md  README_NEW.md  README_OLD.md  SUBMODULE_STATUS.md  WORKING_JOURNAL.md  build.ps1  build_gdextension.py  build_godot.py  build_package.ps1  build_test.py  clean_builds.py  convert_to_gdextension.ps1  dev-settings.json  manage_submodules.py  ponsvg.gdextension  rename_classes.py  setup_build_env.bat  setup_dev_environment.py  setup_github.ps1  test_advanced.py  update_docs.py
.github/: copilot-instructions.md
.github/workflows/: build-and-release.yml  release.yml  test.yml
docs/: SUBMODULES.md
modules/ponsvg/: config.py
modules/ponsvg/src/: lunasvg_integration.cpp  lunasvg_integration.h  register_types.cpp  register_types.h  svg_resource.cpp  svg_resource.h  svg_sprite.cpp  svg_sprite.h  svg_texture.cpp  svg_texture.h
modules/svg_module/: config.py
modules/svg_module/src/: lunasvg_integration.cpp  lunasvg_integration.h  register_types.cpp  register_types.h  svg_resource.cpp  svg_resource.h  svg_sprite.cpp  svg_sprite.h  svg_texture.cpp  svg_texture.h
src/: lunasvg_integration.cpp  lunasvg_integration.h  register_types.cpp  register_types.h  svg_resource.cpp  svg_resource.h  svg_sprite.cpp  svg_sprite.h  svg_texture.cpp  svg_texture.h
tests/: README.md  build_test.py  test_advanced.py  test_enhanced.py  test_module.py  test_runner.py  test_shader_overrides.gd  test_shader_system.py  test_style_overrides.py
tests/assets/shaders/: color_tint.gdshader  invalid.gdshader  outline.gdshader  pixelate.gdshader
